fixed custom context menu viewport overflow

--- a/src/components/CustomContextMenu/styles.css
+++ b/src/components/CustomContextMenu/styles.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  position: fixed;
   height: auto;
   width: fit-content;
   z-index: 999;
